Fixed bug with z-index - parallax, put planets behing featureScroll

--- a/src/styles/planets.scss
+++ b/src/styles/planets.scss
@@ -1,6 +1,7 @@
 @import "shared.scss";
 
-.planets{
+.planets {
+    z-index: 4000;
     position: absolute;
     top:-20%;
     left:62%;
